# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.md  machine.md  monopoli1.md  monopoli2.md
src/: build.py  config.py  db_connection.py  game.py  game_logic.py  index.py  initialize_database.py  score_db_connection.py
src/entities/: score.py  user.py
src/repositories/: score_repository.py  user_repository.py
src/services/: database_service.py  game_events.py  game_logic.py
src/tests/: game_logic_test.py
src/tests/repositories/: score_repository_test.py  user_repository_test.py
src/tests/services/: database_services_test.py  game_events_test.py  game_logic_test.py
src/ui/: create_user_view.py  game_view.py  logged_view.py  login_view.py  start_view.py  ui.py
