[tool.poetry]
name = "wordgame"
version = "0.1.0"
description = ""
authors = ["rauhja <82282638+rauhja@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
